[metadata]
name = unet
version = 0.1.0
author = Matthias Probst
author_email = matth.probst@gmail.com
description = Implementation of a U-NET
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/unet
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = >=3.8, <3.10
include_package_data = True
install_requires =
    matplotlib
    torch
    omegaconf
    numpy
    hydra-core
    torchvision
    h5py
    tensorboard
    tqdm
    appdirs


[options.extras_require]
test =
    pytest
    pytest-cov
    pylint


[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[coverage:run]
relative_files = true

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    @atexit.register
    except AttributeError
    raise NotImplementedError
    except TypeError
